src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Proceso_Candidato</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contactado</fullName>
        </values>
        <values>
            <fullName>Convertido</fullName>
        </values>
        <values>
            <fullName>Descartado</fullName>
        </values>
        <values>
            <fullName>En seguimiento</fullName>
        </values>
        <values>
            <fullName>Nuevo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>SQL</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>KS_Actividad_Lead_Integracion__c</fullName>
        <label>Actividad Lead Integracion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Actividades_Hubspot</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Actividad_Lead_Otros__c</fullName>
        <label>Actividad Lead Otros</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Actividad_Lead__c</fullName>
        <inlineHelpText>Este campo es obligatorio para la conversion</inlineHelpText>
        <label>Actividad Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Actividad</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_C_digo_Postal__c</fullName>
        <inlineHelpText>Este campo es obligatorio para la conversión</inlineHelpText>
        <label>Código_Postal</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Calle__c</fullName>
        <inlineHelpText>Este campo es obligatorio para la conversión</inlineHelpText>
        <label>Nombre de la vía</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ciudad__c</fullName>
        <inlineHelpText>Este campo es obligatorio para la conversión</inlineHelpText>
        <label>Ciudad</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Consentimiento__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Uno de los campos de tratamiento es obligatorio para poder convertir</inlineHelpText>
        <label>Consentimiento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Estado_o_Provincia__c</fullName>
        <inlineHelpText>Este campo es obligatorio para la conversión</inlineHelpText>
        <label>Estado / Provincia</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_N_m_portal_piso_puerta_y_resto_domici__c</fullName>
        <inlineHelpText>Este campo es obligatorio para la conversión</inlineHelpText>
        <label>Núm, portal, piso, puerta y resto dom.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Numero_de_empleados_empresa__c</fullName>
        <label>Número de empleados empresa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Numero_de_empleados</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Numero_de_proyectos__c</fullName>
        <label>Número de proyectos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Numero_de_proyectos</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Otro_producto_prescrito_Lead__c</fullName>
        <label>Otro producto prescrito Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Pais__c</fullName>
        <inlineHelpText>Este campo es obligatorio para la conversión</inlineHelpText>
        <label>Pais</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Codigo_Pais</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Prescribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Productos_prescritos_lead__c</fullName>
        <label>Productos prescritos lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Producto</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_RechazoComunicaciones__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Uno de los campos de tratamiento es obligatorio para poder convertir</inlineHelpText>
        <label>Rechazo de comunicaciones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Sector_Lead_Otros__c</fullName>
        <label>Sector Lead Otros</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Sector_Lead__c</fullName>
        <inlineHelpText>Este campo es obligatorio para la conversion</inlineHelpText>
        <label>Sector Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Situacion_Laboral__c</fullName>
        <label>Situación Laboral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Situacion_Laboral</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Suscrito_al_blog_hubspot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suscrito al blog - Hubspot -</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_via__c</fullName>
        <inlineHelpText>Este campo es obligatorio para la conversión</inlineHelpText>
        <label>Tipo de vía</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_via</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_BANT__c</fullName>
        <description>Campo donde los usuarios COIN indicaran el BANT</description>
        <label>BANT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SI_ControlPropietario__c</fullName>
        <formula>Owner:User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Descripcion_proyecto__c</fullName>
        <label>Descripción proyecto</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SI_Email_Cuenta__c</fullName>
        <inlineHelpText>Este campo es obligatorio para la conversion</inlineHelpText>
        <label>Email Cuenta</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SI_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activo</fullName>
                    <default>true</default>
                    <label>Activo</label>
                </value>
                <value>
                    <fullName>Pasivo</fullName>
                </value>
                <value>
                    <fullName>Standby</fullName>
                </value>
                <value>
                    <fullName>A revisar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Interes_Legitimo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interés Legítimo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Mail_Valido__c</fullName>
        <label>Mail Valido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Motivo_descarte__c</fullName>
        <label>Motivo de descarte</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fuera de target</fullName>
                </value>
                <value>
                    <fullName>No cumple BANT</fullName>
                </value>
                <value>
                    <fullName>Fuera de zona COIN</fullName>
                </value>
                <value>
                    <fullName>Contacto Fallido</fullName>
                </value>
                <value>
                    <fullName>Ya es cliente SIMON</fullName>
                    <isActive>false</isActive>
                    <label>Ya es cliente SIMON</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Productos_prescritos_Lead__c</fullName>
        <label>Productos prescritos Lead</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mecanismos</fullName>
                </value>
                <value>
                    <fullName>Conectividad</fullName>
                </value>
                <value>
                    <fullName>Iluminación</fullName>
                </value>
                <value>
                    <fullName>Sistemas de control</fullName>
                </value>
                <value>
                    <fullName>Vehículo Eléctrico</fullName>
                </value>
                <value>
                    <fullName>Porteros automáticos</fullName>
                </value>
                <value>
                    <fullName>Cuadros eléctricos</fullName>
                </value>
                <value>
                    <fullName>Seguridad</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Iluminación exterior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Telefono_Movil__c</fullName>
        <inlineHelpText>Este campo es obligatorio para la conversión</inlineHelpText>
        <label>Teléfono Móvil</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SI_Tratamiento_Datos_Lead__c</fullName>
        <label>Tratamiento Datos Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Freely given consent from contact</fullName>
                </value>
                <value>
                    <fullName>Legitimate interest - existing customer</fullName>
                </value>
                <value>
                    <fullName>Legitimate interest - prospect/lead</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Performance of a contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AsignacionCadidatos_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Asignacion Leads</label>
        <language>es</language>
        <queue>AsignacionCadidatos</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KS_todos_los_leads_por_region</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>KS_Actividad_Lead__c</columns>
        <columns>KS_Actividad_Lead_Integracion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Habilitado</value>
        </filters>
        <label>Todos los Leads por region</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>LEADS_DETAILERS</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>KS_Estado_o_Provincia__c</columns>
        <columns>KS_C_digo_Postal__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Detailer,Web_espanya,Web Simon</value>
        </filters>
        <label>LEADS DETAILERS y WEB SIMON</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Mis_leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>Mis leads</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Leads creados hoy</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Todos_los_Leads_abiertos</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>KS_C_digo_Postal__c</columns>
        <columns>KS_Estado_o_Provincia__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Descartado</value>
        </filters>
        <label>Todos los Leads abiertos</label>
        <language>es</language>
    </listViews>
    <recordTypes>
        <fullName>Convertir</fullName>
        <active>true</active>
        <businessProcess>Proceso_Candidato</businessProcess>
        <label>Convertir</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nuevo</fullName>
        <active>true</active>
        <businessProcess>Proceso_Candidato</businessProcess>
        <description>El candidato aun no tiene datos suficientes para convertir</description>
        <label>Nuevo</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>CHANGE_Consentimiento</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( KS_Consentimiento__c ) &amp;&amp; KS_Consentimiento__c == false &amp;&amp; !CONTAINS($Profile.Name, &apos;Admin&apos;) &amp;&amp;  KS_RechazoComunicaciones__c == false</errorConditionFormula>
        <errorMessage>Una vez dado el consentimiento, no puede quitarse.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANGE_Rechazo</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED( KS_RechazoComunicaciones__c ) 
&amp;&amp; KS_RechazoComunicaciones__c == false 
&amp;&amp; !CONTAINS($Profile.Name, &apos;Admin&apos;)) 
|| 
(ISCHANGED( KS_Consentimiento__c ) 
&amp;&amp; KS_Consentimiento__c == true 
&amp;&amp; !CONTAINS($Profile.Name, &apos;Admin&apos;) 
&amp;&amp; KS_RechazoComunicaciones__c == true)</errorConditionFormula>
        <errorMessage>Una vez rechazada la comunicación, no puede aceptarse.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cambio_BANT</fullName>
        <active>false</active>
        <description>No puede asignarse a otro usuario si el cambio BANT esta vacio.</description>
        <errorConditionFormula>AND( 
ISCHANGED( SI_ControlPropietario__c ), 
SI_BANT__c = Null 
)</errorConditionFormula>
        <errorMessage>Antes de reasignar el candidato debes rellenar el campo BANT</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Descartados</fullName>
        <active>true</active>
        <description>Si es descartado necesita un motivo</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Status, &apos;Descartado&apos;), 
ISPICKVAL(SI_Motivo_descarte__c, &quot;&quot;) 
)</errorConditionFormula>
        <errorMessage>Debes indicar un motivo de descarte.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_area_de_Negocio</fullName>
        <active>false</active>
        <description>Para cada lead debe de indicarse al menos una división a la que pertenece</description>
        <errorConditionFormula>KS_Fluvia__c=False &amp;&amp;  KS_Simon__c=False &amp;&amp; KS_Lighting__c=False</errorConditionFormula>
        <errorMessage>Debe de indicarse al menos una división (Simon, Fluvia o Lighting) a la que pertenece el candidato</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rechazo_sin_consentimiento</fullName>
        <active>true</active>
        <description>No puede seleccionarse rechazo de comunicaciones si previamente no se han consentido.</description>
        <errorConditionFormula>ISCHANGED(KS_Consentimiento__c)==true &amp;&amp; KS_Consentimiento__c == true &amp;&amp;  KS_RechazoComunicaciones__c == true</errorConditionFormula>
        <errorMessage>No pueden seleccionarse a la vez consentimiento y rechazo de comunicaciones.</errorMessage>
    </validationRules>
</CustomObject>